# guarana

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.Guarana.DerivationImpl.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: guarana.ex  slip10.ex
lib/guarana/: derivation_impl.ex  impl.ex  key.ex
native/guarana/: Cargo.toml
native/guarana/src/: lib.rs
test/: guarana_test.exs  slip10_test.exs
